--- a/service/.gitignore
+++ b/service/.gitignore
@@ -3,8 +3,9 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
 .env.backup
+.env.local
+.env.production
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
