--- a/service/.gitignore
+++ b/service/.gitignore
@@ -3,11 +3,12 @@
 /public/storage
 /storage/*.key
 /vendor
-.env.backup
-.env.local
-.env.production
-.phpunit.result.cache
+/.idea
+/.vscode
+/.vagrant
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.env
+.phpunit.result.cache
