--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "lotto-web-client-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,8 +23,8 @@
     "@okta/okta-angular": "^1.0.4",
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
-    "rxjs": "6.0.0",
-    "rxjs-compat": "6.3.3",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
