--- a/service/.env
+++ b/service/.env
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=LottosDrawMachine
-DB_USERNAME=LottosDrawMachine
-DB_PASSWORD=LottosDrawMachine
+DB_DATABASE=ldm_test
+DB_USERNAME=ldm_test
+DB_PASSWORD=ldm_test
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
