Documented Okta & CloudFlare Authentication and CDN information

--- a/service/.env
+++ b/service/.env
@@ -1,6 +1,6 @@
-APP_NAME=service
+APP_NAME=lotto-draw-machine-service
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:cwlSX21SXhkU8TAPO2X04IuA7Yyc/gGcnv7ZBAe+lLw=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
