--- a/service/.env
+++ b/service/.env
@@ -45,3 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+BUGSNAG_API_KEY=7e7e03ffcc62e21bce786b8020373b38
