--- a/service/composer.json
+++ b/service/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.2",
+        "bugsnag/bugsnag-laravel": "2.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/psr7": "^1.4",
         "laravel/framework": "5.7.*",
