--- a/client/angular.json
+++ b/client/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "lotto-draw-machine-client": {
+    "lotto-draw-machine-bet": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/lotto-draw-machine-client",
+            "outputPath": "dist/lotto-draw-machine-bet",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -51,18 +51,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lotto-draw-machine-client:build"
+            "browserTarget": "lotto-draw-machine-bet:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "lotto-draw-machine-client:build:production"
+              "browserTarget": "lotto-draw-machine-bet:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "lotto-draw-machine-client:build"
+            "browserTarget": "lotto-draw-machine-bet:build"
           }
         },
         "test": {
@@ -96,7 +96,7 @@
         }
       }
     },
-    "lotto-draw-machine-client-e2e": {
+    "lotto-draw-machine-bet-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -104,11 +104,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "lotto-draw-machine-client:serve"
+            "devServerTarget": "lotto-draw-machine-bet:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "lotto-draw-machine-client:serve:production"
+              "devServerTarget": "lotto-draw-machine-bet:serve:production"
             }
           }
         },
@@ -124,5 +124,5 @@
       }
     }
   },
-  "defaultProject": "lotto-draw-machine-client"
+  "defaultProject": "lotto-draw-machine-bet"
 }
